# Metro_Wordle_C-

./: CMakeLists.txt  Main.qml  MetroWordleBackend.cpp  MetroWordleBackend.h  main.cpp
